test_suite/alan-2022-examples/failing/001970_mutation.alan
source P33 begin get . n6 end
